@@ -1,4 +1,4 @@
 @set UPDATED 7 January 2004
 @set UPDATED-MONTH January 2004
-@set EDITION 1.8.1
-@set VERSION 1.8.1
+@set EDITION 1.8.1a
+@set VERSION 1.8.1a
