@@ -1,3 +1,7 @@
+Bug fixed in 1.8.1a:
+
+* Nothing yet.
+
 Bug fixed in 1.8.1:
 
 * Bugs introduced by 1.8:
