@@ -1,5 +1,7 @@
 2004-01-11  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.ac, NEWS: Bump version to 1.8.1a.
+
 	* configure.ac, NEWS: Bump version to 1.8.1.
 
 	* lib/config.sub, lib/config.guess, lib/texinfo.tex: New upstream
